--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,10 @@
     "version": "1.0",
     "description": "A web extension that blocks spoilers on Reddit websites.",
     "permissions": ["activeTab", "storage", "scripting"],
-    "background": {},
+    "background": {
+        "scripts": ["background.js"],
+        "persistent": false
+    },
     "content_scripts": [
         {
             "matches": ["<all_urls>"],
